Fix matches not wrapping to new line

--- a/app/assets/stylesheets/matches.scss
+++ b/app/assets/stylesheets/matches.scss
@@ -1,5 +1,6 @@
 .match-listings-container {
   display: flex;
+  flex-flow: row wrap;
   justify-content: center;
   width: 900px;
   margin: 0 auto;
